# hyperion

./: .gitignore  README.md  combine_normflow_datasets.py  compare_clsim.ipynb  eval_nn_tres_param.ipynb  eval_photon_sims.ipynb  fit_tres.py  generate_photons.py  generate_tres_histograms.py  make_normflow_dataset.py  param_tres_hist.ipynb  param_tres_hist_jax.ipynb  propagate_photons.py  pyproject.toml  realistic_cascades.ipynb  setup.py  train_binned_net_jax.py  train_net.py  train_nflow.py
condor/: combine_tables.py  make_dag.py  submit.sub  submit_fit.sub  submit_hists.sub  submit_nflow_ds.sub  submit_photons.sub
data/: PMTAcc.csv  pone_config_optimistic.json  pone_config_pessimistic.json
examples/: photon_propagation.ipynb  photon_propagation_led.ipynb  photon_propagation_lidar.ipynb  photon_propagation_sca_abs_test.ipynb  photon_propagation_track.ipynb
hyperion/: constants.py  data.py  medium.py  propagate.py  utils.py
hyperion/models/photon_arrival_time/: net.py  pdf.py
hyperion/models/photon_arrival_time_nflow/: net.py
hyperion/models/photon_arrival_time_torch/: pdf.py
hyperion/models/photon_binned_amplitude/: net.py
hyperion/pmt/: pmt.py
hyperion/resources/: medium.json
