[tool.poetry]
name = "hyperion"
version = "0.1.0"
description = ""
authors = ["Christian Haack <christian.haack@icecube.wisc.edu>"]
readme = "README.md"
packages = [{include = "hyperion"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
jax = "^0.4.5"
dm-haiku = "^0.0.9"
optax = "^0.1.4"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
